Fix letter spacing

--- a/html-and-css-prototype/CSS/stylesheet.css
+++ b/html-and-css-prototype/CSS/stylesheet.css
@@ -126,7 +126,7 @@ h1 {
 
 .rep-body-text {
 	margin-bottom: 12px;
-	letter-spacing: .35px;
+	letter-spacing: 0.1px;
 	color: #616161;
 }
 
